fix styles on mobile

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -20,7 +20,7 @@
        screen and (max-height: 400px) {
 
     .header {
-        height: 60vh;
+        max-height: 60vh;
         /* overflow: auto; */
         position: static !important;
     }
