--- a/styles/Post.module.css
+++ b/styles/Post.module.css
@@ -3,7 +3,4 @@
 }
 
 @media only screen and (max-width: 768px) {
-    .post {
-        margin: auto 5%;
-    }
 }
